style(.gitignore): organize sections and add missing slashes for clarity and consistency

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
-node_modules
-dist
+# dependências
+node_modules/
+
+# build
+dist/
+
+# configs locais
 .env
+.env.local
 *.log
-coverage
+
+# testes/coverage
+coverage/
